--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+@use 'src/scss/mui-variables.scss';
+@use 'src/scss/utils.scss';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
