--- a/src/views/LandingPage/components/Star.module.scss
+++ b/src/views/LandingPage/components/Star.module.scss
@@ -1,6 +1,7 @@
 @use 'src/scss/utils';
 
 .root {
+    background: rgb(209, 159, 159);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -9,10 +10,10 @@
     padding-top: 100%;
     padding: utils.spacing(6);
     color: black;
-    box-shadow: rgba(255, 255, 255, 1) 0px 1px 1px 0px inset, rgba(255, 255, 255, 1) 0px 50px 100px -20px, rgba(255, 255, 255, 1) 0px 30px 60px -30px;
+    box-shadow: rgba(209, 159, 159, 1) 0px 1px 1px 0px inset, rgba(209, 159, 159, 1) 0px 50px 100px -20px, rgba(209, 159, 159, 1) 0px 30px 60px -30px;
     transition: ease-out 50ms;
 }
 
 .root:hover {
-    box-shadow: rgba(255, 255, 255, 1) 0px 10px 10px 0px inset, rgba(255, 255, 255, 1) 0px 60px 110px -10px, rgba(255, 255, 255, 1) 0px 40px 70px -20px;
+    box-shadow: rgba(209, 159, 159, 1) 0px 10px 10px 0px inset, rgba(209, 159, 159, 1) 0px 60px 110px -10px, rgba(209, 159, 159, 1) 0px 40px 70px -20px;
 }
