--- a/src/views/LandingPage/LandingPage.module.scss
+++ b/src/views/LandingPage/LandingPage.module.scss
@@ -21,6 +21,7 @@
 .topNav {
   // border-bottom: solid gray 1px;
   padding: utils.spacing(2);
+  margin-bottom: utils.spacing(1);
 }
 
 .searchHelperText {
@@ -45,6 +46,28 @@
 
 .flex {
   display: flex;
+}
+
+.delButton {
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: utils.spacing(3.5);
+  width: utils.spacing(3.5);
+  // border: solid white 1px;
+  background: white;
+}
+
+.avatars {
+  flex-direction: row;
+  // align-items: baseline;
+  // justify-content: baseline;
+}
+
+.avatar {
+  height: utils.spacing(8);
+  width: utils.spacing(8);
 }
 
 .todo {
