--- a/src/views/LandingPage/LandingPage.module.scss
+++ b/src/views/LandingPage/LandingPage.module.scss
@@ -1,26 +1,34 @@
 @use 'src/scss/utils';
 
 .root {
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // height: 100vh;
+}
+
+.paper {
   display: flex;
   flex-direction: column;
-  // display: grid;
-  // grid-template-columns: .25fr auto;
-  min-height: 100vh;
-  padding: utils.spacing(10);
+  margin: utils.spacing(5);
+  // height: calc(100% - 20px);
+  // height: 100px;
+  padding: utils.spacing(5);
+  gap: utils.spacing(1);
 }
 
 .usersSearchBox:hover {
   background: rgba(0,0,0,.2);
 }
 
+.flex {
+  display: flex;
+}
+
 .form {
   display: flex;
   flex-direction: column;
   gap: utils.spacing(2);
-}
-
-.flex {
-  display: flex;
 }
 
 .delButton {
@@ -44,5 +52,45 @@
 }
 
 .image {
-  width: 100%;
+  max-width: calc(50% - utils.spacing(2));
+  max-height: calc(100vh - utils.spacing(16));
+  min-width: 350px;
+}
+
+.searchHelperText {
+  position: absolute;
+  bottom: -21px;
+
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 250ms ease;
+
+  &:global(.Mui-focused) {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+.caption {
+  display: flex;
+  flex-direction: column;
+  justify-content: baseline;
+  gap: utils.spacing(2);
+  flex-grow: 1;
+  align-self: stretch;
+  width: 40%;
+}
+
+.alert {
+  width: min-content;
+}
+
+.alert div:last-child {
+  display: flex;
+  align-items: center;
+  gap: utils.spacing(2);
+}
+
+.body {
+  // width: 50%;
 }
