--- a/src/views/LandingPage/components/CreateGratitudeForm.module.scss
+++ b/src/views/LandingPage/components/CreateGratitudeForm.module.scss
@@ -38,3 +38,18 @@
     visibility: visible;
   }
 }
+
+.imageDiv {
+  width: 100%;
+  min-width: 500px;
+  height: 600px;
+  border-radius: 2%;
+  box-shadow: var(--shadow-24);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-size: cover;
+  background-position: center center;
+}
